# FChess

./: .gitignore  LICENSE  README.md  chess.cabal  fchess.cabal
src/: Chess.hs  FChess.hs
src/Data/FChess/: Defaults.hs  FChess.hs  Fchess.hs  Mechanic.hs
src/Data/FChess/Datatype/: Board.hs  Game.hs  Move.hs  Piece.hs
