name:                fchess
version:             0.1
synopsis:            A library with simple chess mechanics
description:         This library is intended to help understand howto
                     alter the chess problems with functional programming
homepage:            https://github.com/frosch03/FChess
license:             GPL-3
license-file:        LICENSE
author:              Matthias Brettschneider
maintainer:          frosch03@frosch03.de
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  -- Modules exported by the library.
  exposed-modules: Data.FChess

  -- other-modules: System.KSP.Datatype.Object,
  --                System.KSP.Datatype.Body,
  --                System.KSP.Datatype.Orbit,
  --                System.KSP.Datatype.System
  
  -- other-extensions: GADT
  --                 , FlexibleInstances
  
  build-depends: base > 4.5 && < 5
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/frosch03/FChess.git